--- a/reeds/templates/reeds/reed_detail.html
+++ b/reeds/templates/reeds/reed_detail.html
@@ -1,7 +1,18 @@
-<h1>List of My reeds</h1>
-<a href="{% url 'reed_create' %}">Add a new Reed</a>
-<ul>
-  {% for reed in reeds %}
-    <li><a href="{% url 'reed_detail' reed.pk %}">{{ reed.title }}</a></li>
-  {% endfor %}
-</ul>
+<h2>{{ reed.item_id }}</h2>
+<p>{{ reed.item_comment }}</p>
+
+<a href="{% url 'reed_update' reed.pk %}">Edit</a>
+<a href="{% url 'reed_delete' reed.pk %}">Delete</a>
+
+<h3>Comments</h3>
+{% for comment in comments %}
+  <p><strong>{{ comment.author }}</strong>: {{ comment.body }}</p>
+{% empty %}
+  <p>No comments yet.</p>
+{% endfor %}
+
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Add comment</button>
+</form>
