--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Welcome{% endblock %}
+{% block title %}Välkommen{% endblock %}
 {% block content %}
-<h1 class="mb-4">Welcome to Reedmakers</h1>
-<p class="lead">A platform for creating, displaying and commenting on Reeds and Blogposts.</p>
+<div class="text-center mt-5">
+  <h1>Welcome to Reedmakers</h1>
+  <p class="lead">A platform for creating, displaying and commenting on Reeds and Blogposts.</p>
+  <a href="{% url 'reed_list' %}" class="btn btn-primary mt-3">See all reeds</a>
+</div>
 {% endblock %}
