added login html

--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -5,7 +5,6 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
           <li class="nav-item"><a class="nav-link" href="{% url 'reed_list' %}">Reeds</a></li>
@@ -13,16 +12,10 @@
         </ul>
         <ul class="navbar-nav ms-auto">
           {% comment %} {% if user.is_authenticated %}
-            <li class="nav-item">
-              <span class="navbar-text me-2">Hej {{ user.username }}</span>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logga ut</a>
-            </li>
+            <li class="nav-item"><span class="navbar-text me-2">Hej {{ user.username }}</span></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logga ut</a></li>
           {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Logga in</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Logga in</a></li>
           {% endif %} {% endcomment %}
           <li class="nav-item">
             <button id="themeToggle" class="btn btn-sm btn-outline-light ms-3">🌙</button>
@@ -30,4 +23,5 @@
         </ul>
       </div>
     </div>
-</nav>
+  </nav>
+  
