--- a/templates/components/confirm_delete.html
+++ b/templates/components/confirm_delete.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}Confirm delete{% endblock %}
 {% block content %}
 <h2 class="mb-3">Confirm delete</h2>
