--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block title %}Log in{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
