--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block title %}{% if form.instance.pk %}Edit{% else %}Create{% endif %} Post{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
