--- a/templates/reeds/reed_form.html
+++ b/templates/reeds/reed_form.html
@@ -1,7 +1,24 @@
-<h2>{% if form.instance.pk %}Edit{% else %}Create{% endif %} Reed</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Save</button>
-</form>
-<a href="{% url 'reed_list' %}">Back</a>
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+{% block title %}{% if form.instance.pk %}Edit{% else %}Create{% endif %} Reed{% endblock %}
+{% block content %}
+<div class="row justify-content-center">
+  <div class="col-md-8 col-lg-6">
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h3 class="card-title mb-4 text-center">{% if form.instance.pk %}Edit{% else %}Create{% endif %} Reed</h3>
+        <form method="post">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit" class="btn btn-primary w-100">Save</button>
+          <a href="{% url 'reed_list' %}">Back</a>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+
+
+
