--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -5,7 +5,7 @@
   <div class="card-body">
     <h2 class="card-title">{{ post.title }}</h2>
     <p class="card-text">{{ post.body }}</p>
-    <p class="text-muted">Av {{ post.author }} - {{ post.created_on|date:"Y-m-d" }}</p>
+    <p class="text-muted">By {{ post.author }} | Created {{ post.created_on|date:"Y-m-d" }} | Updated {{ post.updated_on|date:"Y-m-d" }}</p>
   </div>
 </div>
 {% if user == post.author %}
