--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -12,7 +12,7 @@
         </ul>
         <ul class="navbar-nav ms-auto">
           {% comment %} {% if user.is_authenticated %}
-            <li class="nav-item"><span class="navbar-text me-2">Hej {{ user.username }}</span></li>
+            <li class="nav-item"><span class="navbar-text me-2">Hi{{ user.username }}</span></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logga ut</a></li>
           {% else %}
             <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Logga in</a></li>
