--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Välkommen{% endblock %}
+{% block title %}Welcome{% endblock %}
 {% block content %}
 <div class="text-center mt-5">
   <h1>Welcome to Reedmakers</h1>
