--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -6,7 +6,7 @@
 <ul class="list-group">
   {% for post in posts %}
     <li class="list-group-item">
-      <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
+      <a href="{% url 'post_detail' post.pk %}">{{ post.title }} | {{ post.author }}</a>
     </li>
   {% endfor %}
 </ul>
