--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,10 @@
     </main>
     {% include 'components/_footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom Java scripts-->
+    <!-- Toggle between light/dark theme in visuals -->    
     <script src="{% static 'js/theme-toggle.js' %}"></script>
+    <!-- Submit form direct after a form-event -->   
+    <script src="{% static 'js/auto-submit.js' %}"></script>
 </body>
 </html>
