--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}All posts{% endblock %}
 {% block content %}
+
+<!-- List all logged Posts with selected metadata -->
 <h1 class="mb-4">All posts</h1>
 <a href="{% url 'post_create' %}" class="btn btn-primary mb-3">New post</a>
 <ul class="list-group">
