--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
 {% block title %}Welcome{% endblock %}
 {% block content %}
 <div class="text-center mt-5">
-  <h1>Welcome to Reedmakers</h1>
-  <p class="lead">A platform for creating, displaying and commenting on Reeds and Blogposts.</p>
+  <h1>Welcome to Reedmaker Studio!</h1>
+  <p class="lead">This is a platform for learning, sharing and discussing reedmaking. This is a platform for all of us who loves to discuss reeds in every aspect. If you are addicted to news and stories about reedmaking, you have come to the right place!</p>
   <a href="{% url 'reed_list' %}" class="btn btn-primary mt-3">See all reeds</a>
 </div>
 {% endblock %}
