--- a/templates/base.html
+++ b/templates/base.html
@@ -4,23 +4,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Reedmakers{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Reedmaker studio lets musicians post and interact on articles and specifications of reeds.">
+    <title>{% block title %}Reedmakers Studio{% endblock %}</title>
+    
+    <!-- Boostrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
          
 <body class="d-flex flex-column min-vh-100">
+    <!-- Navbar -->
     {% include 'components/_navbar.html' %}
+
     <main class="container mt-4 mb-5">
         {% include 'components/_messages.html' %}
-        {% block content %}{% endblock %}
+        {% block content %}
+        <!-- Content goes here -->
+        {% endblock %}
     </main>
+
+    <!-- Footer -->
     {% include 'components/_footer.html' %}
+
+    <!-- Bootstrap Javascript -->  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom Java scripts-->
-    <!-- Toggle between light/dark theme in visuals -->    
+    <!-- Custom Javascript -->   
+         <!-- Script to toggle between light and dark theme on the site -->    
     <script src="{% static 'js/theme-toggle.js' %}"></script>
-    <!-- Submit form direct after a form-event -->   
+         <!-- Script to ensure any action on a form trigger a submit -->    
     <script src="{% static 'js/auto-submit.js' %}"></script>
 </body>
 </html>
